--- a/application/admin/view/layout/footer.html
+++ b/application/admin/view/layout/footer.html
@@ -1,11 +1,11 @@
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="__STATIC__/lib/jquery/1.9.1/jquery.min.js"></script> 
-<script type="text/javascript" src="__STATIC__/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="__STATIC__/h-ui/js/H-ui.min.js"></script>
-<script type="text/javascript" src="__STATIC__/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/__STATIC__/lib/jquery/1.9.1/jquery.min.js"></script> 
+<script type="text/javascript" src="/__STATIC__/lib/layer/2.4/layer.js"></script>
+<script type="text/javascript" src="/__STATIC__/h-ui/js/H-ui.min.js"></script>
+<script type="text/javascript" src="/__STATIC__/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="__STATIC__/lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
+<script type="text/javascript" src="/__STATIC__/lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
 <script type="text/javascript">
 $(function(){
 	/*$("#min_title_list li").contextMenu('Huiadminmenu', {
