--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -1,28 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="renderer" content="webkit|ie-comp|ie-stand">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <!--[if lt IE 9]>
-<script type="text/javascript" src="lib/html5shiv.js"></script>
-<script type="text/javascript" src="lib/respond.min.js"></script>
-<![endif]-->
-    <link rel="stylesheet" type="text/css" href="/__STATIC__/h-ui/css/H-ui.min.css" />
-    <link rel="stylesheet" type="text/css" href="/__STATIC__/h-ui.admin/css/H-ui.admin.css" />
-    <link rel="stylesheet" type="text/css" href="/__STATIC__/lib/Hui-iconfont/1.0.8/iconfont.css" />
-    <link rel="stylesheet" type="text/css" href="/__STATIC__/h-ui.admin/skin/default/skin.css" id="skin" />
-    <link rel="stylesheet" type="text/css" href="/__STATIC__/h-ui.admin/css/style.css" />
-    <!--[if IE 6]>
-<script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
-<script>DD_belatedPNG.fix('*');</script>
-<![endif]-->
-    <title>用户管理</title>
-</head>
+{include file='layout/head' /}
 
 <body>
     <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页<span class="c-gray en">&gt;</span> 用户中心 <span
@@ -86,16 +65,13 @@
         </div>
     </div>
     <!--_footer 作为公共模版分离出去-->
-    <script type="text/javascript" src="__STATIC__/lib/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="__STATIC__/lib/layer/2.4/layer.js"></script>
-    <script type="text/javascript" src="__STATIC__/h-ui/js/H-ui.min.js"></script>
-    <script type="text/javascript" src="__STATIC__/h-ui.admin/js/H-ui.admin.js"></script>
+    {include file='layout/footer' /}
     <!--/_footer 作为公共模版分离出去-->
 
     <!--请在下方写此页面业务相关的脚本-->
-    <script type="text/javascript" src="__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-    <script type="text/javascript" src="__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="__STATIC__/lib/laypage/1.2/laypage.js"></script>
+    <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
+    <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="/__STATIC__/lib/laypage/1.2/laypage.js"></script>
     <script type="text/javascript">
         $(function () {
             $('.table-sort').dataTable({
