--- a/application/admin/view/layout/menu.html
+++ b/application/admin/view/layout/menu.html
@@ -3,7 +3,7 @@
         <dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
         <dd>
             <ul>
-                <li><a data-href="{url('admin/index/test')}" data-title="资讯管理" href="javascript:void(0)">资讯管理</a></li>
+                <li><a data-href="{:url('admin/article/art_list')}" data-title="资讯管理" href="javascript:void(0)">资讯管理</a></li>
         </ul>
     </dd>
 </dl>
