添加图片、产品后台模板文件

--- a/application/admin/view/article/art_list.html
+++ b/application/admin/view/article/art_list.html
@@ -60,7 +60,7 @@
 		</table>
 	</div>
 </div>
-{include file="layout/footer"}
+{include file="layout/footer" /}
 
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script> 
