--- a/application/admin/view/layout/menu.html
+++ b/application/admin/view/layout/menu.html
@@ -11,7 +11,7 @@
         <dt><i class="Hui-iconfont">&#xe613;</i> 图片管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
         <dd>
             <ul>
-                <li><a data-href="admin/index/test" data-title="图片管理" href="javascript:void(0)">图片管理</a></li>
+                <li><a data-href="{:url('admin/picture/picture_list')}" data-title="图片管理" href="javascript:void(0)">图片管理</a></li>
         </ul>
     </dd>
 </dl>
@@ -19,9 +19,9 @@
         <dt><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
         <dd>
             <ul>
-                <li><a data-href="product-brand.html" data-title="品牌管理" href="javascript:void(0)">品牌管理</a></li>
-                <li><a data-href="product-category.html" data-title="分类管理" href="javascript:void(0)">分类管理</a></li>
-                <li><a data-href="product-list.html" data-title="产品管理" href="javascript:void(0)">产品管理</a></li>
+                <li><a data-href="{:url('admin/product/brand')}" data-title="品牌管理" href="javascript:void(0)">品牌管理</a></li>
+                <li><a data-href="{:url('admin/product/category')}" data-title="分类管理" href="javascript:void(0)">分类管理</a></li>
+                <li><a data-href="{:url('admin/product/product_list')}" data-title="产品管理" href="javascript:void(0)">产品管理</a></li>
         </ul>
     </dd>
 </dl>
