--- a/application/admin/view/picture/picture_list.html
+++ b/application/admin/view/picture/picture_list.html
@@ -1,4 +1,4 @@
-﻿{include file="public/header"}
+﻿{include file="layout/head"/}
 <!--[if IE 6]>
 <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
@@ -33,7 +33,7 @@
 					<td><input name="" type="checkbox" value=""></td>
 					<td>001</td>
 					<td>分类名称</td>
-					<td><a href="javascript:;" onClick="picture_edit('图库编辑','picture-show.html','10001')"><img width="210" class="picture-thumb" src="temp/200x150.jpg"></a></td>
+					<td><a href="javascript:;" onClick="picture_edit('图库编辑','picture-show.html','10001')"><img width="210" class="picture-thumb" src="/__STATIC__/temp/200x150.jpg"></a></td>
 					<td class="text-l"><a class="maincolor" href="javascript:;" onClick="picture_edit('图库编辑','picture-show.html','10001')">现代简约 白色 餐厅</a></td>
 					<td class="text-c">标签</td>
 					<td>2014-6-11 11:11:42</td>
@@ -45,7 +45,7 @@
 	</div>
 </div>
 
-{include file="public/footer"}
+{include file="layout/footer"/}
 
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script> 
