--- a/application/admin/view/product/brand.html
+++ b/application/admin/view/product/brand.html
@@ -1,4 +1,4 @@
-﻿{include file="public/header"}
+﻿{include file="layout/head"/}
 <title>品牌管理</title>
 </head>
 <body>
@@ -38,7 +38,7 @@
 					<td><input name="" type="checkbox" value=""></td>
 					<td>1</td>
 					<td><input type="text" class="input-text text-c" value="1"></td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td><img src="/__STATIC__/temp/brand/dongpeng.jpeg"></td>
 					<td class="text-l"><img title="国内品牌" src="/__STATIC__/h-ui.admin/images/cn.gif"> 东鹏</td>
 					<td class="text-l">东鹏陶瓷被评为“中国名牌”、“国家免检产品”、“中国驰名商标”、http://www.dongpeng.net/</td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
@@ -47,12 +47,12 @@
 		</table>
 	</div>
 </div>
-{include file="public/footer"}
+{include file="layout/footer"/}
 
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script> 
 <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
-<script type="text/javascript" src="/__STATIC__/slib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="/__STATIC__/lib/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
 $('.table-sort').dataTable({
 	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
