--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -4,10 +4,13 @@
 <body>
 <article class="page-container">
 	<form class="form form-horizontal" id="form-admin-add">
+		<input type="hidden" name="act" id="act" value="{$act}">
+		<input type="hidden" name="id" value="{//$info.admin_id}">
+		<!-- <input type="hidden" name="admin_id" value="{//$info.id}"> -->
 	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>管理员：</label>
 		<div class="formControls col-xs-8 col-sm-9">
-			<input type="text" class="input-text" value="" placeholder="" id="adminName" name="adminName">
+			<input type="text" class="input-text" value="" placeholder="" id="adminName" name="name">
 		</div>
 	</div>
 	<div class="row cl">
@@ -22,7 +25,7 @@
 			<input type="password" class="input-text" autocomplete="off"  placeholder="确认新密码" id="password2" name="password2">
 		</div>
 	</div>
-	<div class="row cl">
+	<!-- <div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>性别：</label>
 		<div class="formControls col-xs-8 col-sm-9 skin-minimal">
 			<div class="radio-box">
@@ -34,8 +37,8 @@
 				<label for="sex-2">女</label>
 			</div>
 		</div>
-	</div>
-	<div class="row cl">
+	</div> -->
+	<!-- <div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>手机：</label>
 		<div class="formControls col-xs-8 col-sm-9">
 			<input type="text" class="input-text" value="" placeholder="" id="phone" name="phone">
@@ -46,11 +49,11 @@
 		<div class="formControls col-xs-8 col-sm-9">
 			<input type="text" class="input-text" placeholder="@" name="email" id="email">
 		</div>
-	</div>
+	</div> -->
 	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3">角色：</label>
 		<div class="formControls col-xs-8 col-sm-9"> <span class="select-box" style="width:150px;">
-			<select class="select" name="adminRole" size="1">
+			<select class="select" name="group_id" size="1">
 				<option value="0">超级管理员</option>
 				<option value="1">总编</option>
 				<option value="2">栏目主辑</option>
@@ -58,16 +61,11 @@
 			</select>
 			</span> </div>
 	</div>
-	<div class="row cl">
-		<label class="form-label col-xs-4 col-sm-3">备注：</label>
-		<div class="formControls col-xs-8 col-sm-9">
-			<textarea name="" cols="" rows="" class="textarea"  placeholder="说点什么...100个字符以内" dragonfly="true" onKeyUp="$.Huitextarealength(this,100)"></textarea>
-			<p class="textarea-numberbar"><em class="textarea-length">0</em>/100</p>
-		</div>
-	</div>
+
 	<div class="row cl">
 		<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
 			<input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
+			<!-- <div class="btn btn-primary radius"><a href="JavaScript:void(0);" onclick="adsubmit();" id="submitBtn">确认提交</a></div> -->
 		</div>
 	</div>
 	</form>
@@ -77,9 +75,9 @@
 {include file='layout/footer' /}
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="lib/jquery.validation/1.14.0/jquery.validate.js"></script> 
-<script type="text/javascript" src="lib/jquery.validation/1.14.0/validate-methods.js"></script> 
-<script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.js"></script> 
+<script type="text/javascript" src="/__STATIC__/lib/jquery.validation/1.14.0/jquery.validate.js"></script> 
+<script type="text/javascript" src="/__STATIC__/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
+<script type="text/javascript" src="/__STATIC__/lib/jquery.validation/1.14.0/messages_zh.js"></script> 
 <script type="text/javascript">
 $(function(){
 	$('.skin-minimal input').iCheck({
@@ -102,17 +100,17 @@ $(function(){
 				required:true,
 				equalTo: "#password"
 			},
-			sex:{
-				required:true,
-			},
-			phone:{
-				required:true,
-				isPhone:true,
-			},
-			email:{
-				required:true,
-				email:true,
-			},
+			// sex:{
+			// 	required:true,
+			// },
+			// phone:{
+			// 	required:true,
+			// 	isPhone:true,
+			// },
+			// email:{
+			// 	required:true,
+			// 	email:true,
+			// },
 			adminRole:{
 				required:true,
 			},
@@ -121,22 +119,35 @@ $(function(){
 		focusCleanup:true,
 		success:"valid",
 		submitHandler:function(form){
-			$(form).ajaxSubmit({
+		    //  console.log($(form).serialize())
+			$.ajax({
 				type: 'post',
-				url: "xxxxxxx" ,
+				url: "{:url('admin/admin/adminHandle')}",
+				data: $(form).serialize(),
+				// dataType: 'json',
 				success: function(data){
-					layer.msg('添加成功!',{icon:1,time:1000});
+					// layer.msg('添加成功!',{icon:1,time:1000});
+					if (data.status == 1) {
+						layer.msg(data.msg,{icon: 1,time: 1000},function () {
+							
+						})
+					} else {
+						layer.msg(data.msg,{icon: 2,time: 2000})
+					}
+
 				},
-                error: function(XmlHttpRequest, textStatus, errorThrown){
-					layer.msg('error!',{icon:1,time:1000});
-				}
+                // error: function(XmlHttpRequest, textStatus, errorThrown){
+				// 	layer.msg('error!',{icon:1,time:1000});
+				// }
 			});
-			var index = parent.layer.getFrameIndex(window.name);
-			parent.$('.btn-refresh').click();
-			parent.layer.close(index);
+			// var index = parent.layer.getFrameIndex(window.name);
+			// parent.$('.btn-refresh').click();
+			// parent.layer.close(index);
 		}
 	});
 });
+
+
 </script> 
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
