--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -12,7 +12,7 @@
 			<input type="text" onfocus="WdatePicker()" id="datemin" class="input-text Wdate" style="width:120px;">
 			-
 			<input type="text" onfocus="WdatePicker()" id="datemax" class="input-text Wdate" style="width:120px;">
-			<input type="text" class="input-text" style="width:250px" placeholder="输入管理员名称" id="" name="">
+			<input type="text" class="input-text" style="width:250px" placeholder="输入管理员名称" id="" name="keywords">
 			<button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i>
 				搜用户</button>
 		</div>
@@ -65,34 +65,7 @@
 					</td>
 				</tr>
 
-				<foreach name="list" item="vo" key="k">
-					<tr class="text-c">
-						<td><input type="checkbox" value="1" name=""></td>
-						<td>{$vo.admin_id}</td>
-						<td>{$vo.user_name}</td>
-						<td>{$vo.mobile}</td>
-						<td>{$vo.email}</td>
-						<td>{$vo.role}</td>
-						<td>{$vo.add_time}</td>
-						<td class="td-status"><span class="label label-success radius">已启用</span></td>
-						<td class="td-status"><span class="label label-success radius">已启用</span></td>
-						<td class="td-manage">
-							<a style="text-decoration:none" onClick="admin_stop(this,'10001')" href="javascript:;"
-								title="停用">
-								<i class="Hui-iconfont">&#xe631;</i>
-							</a>
-							<a title="编辑" href="javascript:;"
-								onclick="admin_edit('管理员编辑','{:url('admin/admin/add')}','1','800','500')" class="ml-5"
-								style="text-decoration:none">
-							</a><i class="Hui-iconfont">&#xe6df;</i>
-							</a>
-							<a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5"
-								style="text-decoration:none">
-								<i class="Hui-iconfont">&#xe6e2;</i>
-							</a>
-						</td>
-					</tr>
-				</foreach>
+
 			</tbody>
 		</table>
 	</div>
