--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -43,11 +43,11 @@
                                     onclick="member_show('{$vo.nickname}','member-show.html','10001','360','400')">{$vo.nickname}</u></td>
                             <td>{$vo.mobile}</td>
                             <td>{$vo.email}</td>
-                            <td>{$vo.register_time}</td>
+                            <td>{$vo.register_time|date="Y-m-d",###}</td>
                             <td class="td-status"><span class="label label-success radius">已启用</span></td>
                             <td class="td-manage"><a style="text-decoration:none" onClick="member_stop(this,'10001')"
                                     href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a> <a title="编辑"
-                                    href="javascript:;" onclick="member_edit('编辑','member-add.html','4','','510')"
+                                    href="javascript:;" onclick="member_edit('编辑','eidt.html','4','','510')"
                                     class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a
                                     style="text-decoration:none" class="ml-5"
                                     onClick="change_password('修改密码','change-password.html','10001','600','270')"
