--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -5,7 +5,7 @@
 <article class="page-container">
 	<form class="form form-horizontal" id="form-admin-add">
 		<input type="hidden" name="act" id="act" value="{$act}">
-		<input type="hidden" name="id" value="{//$info.admin_id}">
+		<!-- <input type="text" name="id" value="{//$info.id}"> -->
 		<!-- <input type="hidden" name="admin_id" value="{//$info.id}"> -->
 	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>管理员：</label>
@@ -54,10 +54,9 @@
 		<label class="form-label col-xs-4 col-sm-3">角色：</label>
 		<div class="formControls col-xs-8 col-sm-9"> <span class="select-box" style="width:150px;">
 			<select class="select" name="group_id" size="1">
-				<option value="0">超级管理员</option>
-				<option value="1">总编</option>
-				<option value="2">栏目主辑</option>
-				<option value="3">栏目编辑</option>
+				{volist name="role" id="vo"}
+				<option value="{$vo.id}">{$vo.name}</option>
+				{/volist}
 			</select>
 			</span> </div>
 	</div>
@@ -88,62 +87,62 @@ $(function(){
 	
 	$("#form-admin-add").validate({
 		rules:{
-			adminName:{
+			name:{
 				required:true,
 				minlength:4,
 				maxlength:16
 			},
 			password:{
 				required:true,
+				minlength: 4,
+				maxlength: 16				
 			},
 			password2:{
 				required:true,
-				equalTo: "#password"
+				equalTo: "#password",
+				minlength: 4,
+				maxlength: 16				
 			},
-			// sex:{
-			// 	required:true,
-			// },
-			// phone:{
-			// 	required:true,
-			// 	isPhone:true,
-			// },
-			// email:{
-			// 	required:true,
-			// 	email:true,
-			// },
-			adminRole:{
+
+			group_id:{
 				required:true,
 			},
 		},
 		onkeyup:false,
 		focusCleanup:true,
 		success:"valid",
+
 		submitHandler:function(form){
-		    //  console.log($(form).serialize())
+		 
 			$.ajax({
 				type: 'post',
 				url: "{:url('admin/admin/adminHandle')}",
 				data: $(form).serialize(),
-				// dataType: 'json',
+			
 				success: function(data){
-					alert(data);
-
+				
 					if (data.status == 1) {
 						layer.msg(data.msg,{icon: 1,time: 1000},function () {
-							
+							parent.location.reload()
+							// var index = parent.layer.getFrameIndex(window.name);
+							// parent.$('.btn-refresh').click();
+							// parent.layer.close(index);
+							// parent.location.reload()
 						})
-					} else {
-						layer.msg(data.msg,{icon: 2,time: 2000})
+					}else{
+						    layer.msg(data.msg,{icon: 2,time: 1000},function () {
+					
+							// var index = parent.layer.getFrameIndex(window.name);
+							// parent.$('.btn-refresh').click();
+							// parent.layer.close(index);
+							// parent.location.reload
+						})
 					}
 
-				},
-                // error: function(XmlHttpRequest, textStatus, errorThrown){
-				// 	layer.msg('error!',{icon:1,time:1000});
-				// }
+				},			
+
 			});
-			// var index = parent.layer.getFrameIndex(window.name);
-			// parent.$('.btn-refresh').click();
-			// parent.layer.close(index);
+
 		}
 	});
 });
