--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -31,8 +31,8 @@
 					<th width="25"><input type="checkbox" name="" value=""></th>
 					<th width="40">ID</th>
 					<th width="150">登录名</th>
-					<th width="90">手机</th>
-					<th width="150">邮箱</th>
+					<!-- <th width="90">手机</th>
+					<th width="150">邮箱</th> -->
 					<th>角色</th>
 					<th width="130">加入时间</th>
 					<th width="100">是否已启用</th>
@@ -40,30 +40,34 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c">
-					<td><input type="checkbox" value="1" name=""></td>
-					<td>1</td>
-					<td>admin</td>
-					<td>13000000000</td>
-					<td>admin@mail.com</td>
-					<td>超级管理员</td>
-					<td>2014-6-11 11:11:42</td>
-					<td class="td-status"><span class="label label-success radius">已启用</span></td>
-					<td class="td-manage">
-						<a style="text-decoration:none" onClick="admin_stop(this,'10001')" href="javascript:;"
-							title="停用">
-							<i class="Hui-iconfont">&#xe631;</i>
-						</a>
-						<a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','admin-add.html','1','800','500')"
-							class="ml-5" style="text-decoration:none">
-						</a><i class="Hui-iconfont">&#xe6df;</i>
-						</a>
-						<a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5"
-							style="text-decoration:none">
-							<i class="Hui-iconfont">&#xe6e2;</i>
-						</a>
-					</td>
-				</tr>
+
+				{volist name="list" id="vo"}
+					<tr class="text-c">
+						<td><input type="checkbox" value="1" name=""></td>
+						<td>{$vo.id}</td>
+						<td>{$vo.name}</td>
+						<!-- <td>13000000000</td>
+						<td>admin@mail.com</td> -->
+						<td>{$vo.g_name}</td>
+						<td>{:date('Y-m-d,H:s:i',$vo.addtime)}</td>
+						<td class="td-status"><span class="label label-success radius">已启用</span></td>
+						<td class="td-manage">
+							<a style="text-decoration:none" onClick="admin_stop(this,'10001')" href="javascript:;" title="停用">
+								<i class="Hui-iconfont">&#xe631;</i>
+							</a>
+							<a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','{:url('Admin/edit',array('id'=>$vo['id']))}','1','800','500')" class="ml-5"
+								style="text-decoration:none">
+								<i class="Hui-iconfont">&#xe6df;</i>
+							</a>
+
+							<a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5" style="text-decoration:none">
+								<i class="Hui-iconfont">&#xe6e2;</i>
+							</a>
+						</td>
+					</tr>
+				{/volist}
+
+
 
 
 			</tbody>
