--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -52,7 +52,7 @@
 						<td>{:date('Y-m-d,H:s:i',$vo.addtime)}</td>
 						<td class="td-status"><span class="label label-success radius">已启用</span></td>
 						<td class="td-manage">
-							<a style="text-decoration:none" onClick="admin_stop(this,'10001')" href="javascript:;" title="停用">
+							<a style="text-decoration:none" onClick="admin_stop(this,{$vo['id']})" href="javascript:;" title="停用">
 								<i class="Hui-iconfont">&#xe631;</i>
 							</a>
 							<a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','{:url('Admin/edit',array('id'=>$vo['id']))}','1','800','500')" class="ml-5"
@@ -125,11 +125,27 @@
 		function admin_stop(obj, id) {
 			layer.confirm('确认要停用吗？', function (index) {
 				//此处请求后台程序，下方是成功后的前台处理……
+				$.ajax({
+					type: 'POST',
+					url: "{:url('admin/admin/is_stop')}",
+					data: { 'id': id },
+					dataType: 'json',
+					success: function (data) {
+						if (data.status == 1) {
+							$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
+							$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
+							$(obj).remove();
+							layer.msg('已停用!', { icon: 5, time: 1000 });
+						} else {
+							layer.msg('操作失败!', { icon: 2, time: 1000 });
+						}
 
-				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-				$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-				$(obj).remove();
-				layer.msg('已停用!', { icon: 5, time: 1000 });
+					},
+					error: function (data) {
+						console.log(data.msg);
+					},
+				});                
+
 			});
 		}
 
