--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -26,10 +26,15 @@
                     <tr class="text-c">
                         <th width="25"><input type="checkbox" name="" value=""></th>
                         <th width="80">ID</th>
-                        <th width="100">用户名</th>
-                        <th width="90">手机</th>
+                        <th width="150">用户名</th>
+                        <th width="130">手机</th>
                         <th width="150">邮箱</th>
-                        <th width="130">注册时间</th>
+                        <th width="120">分组</th>
+                        <th width="50">等级</th>
+                        <th width="120">余额</th>
+                        <th width="50">分销商</th>
+                        <th width="150">上级</th>
+                        <th width="110">注册时间</th>
                         <th width="70">状态</th>
                         <th width="100">操作</th>
                     </tr>
@@ -37,23 +42,36 @@
                 <tbody>
                     {foreach name="list" item="vo"}
                         <tr class="text-c">
-                            <td><input type="checkbox" value="{$key+1}" name=""></td>
+                            <td><input type="checkbox" value="{$vo.id}" name="user_id"></td>
                             <td>{$vo.id}</td>
                             <td><u style="cursor:pointer" class="text-primary"
                                     onclick="member_show('{$vo.nickname}','member-show.html','10001','360','400')">{$vo.nickname}</u></td>
                             <td>{$vo.mobile}</td>
                             <td>{$vo.email}</td>
+                            <td>{$vo.group_id|group_name}</td>
+                            <td>{$vo.level}</td>
+                            <td>{$vo.money}</td>
+                            <td>{if condition="$vo.is_distributor == 1"}是{else/}否{/if}</td>
+                            <td>{$vo.id|first_leader}</td>
                             <td>{$vo.register_time|date="Y-m-d",###}</td>
-                            <td class="td-status"><span class="label label-success radius">已启用</span></td>
-                            <td class="td-manage"><a style="text-decoration:none" onClick="member_stop(this,'10001')"
-                                    href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a> <a title="编辑"
-                                    href="javascript:;" onclick="member_edit('编辑','eidt.html','4','','510')"
-                                    class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a
-                                    style="text-decoration:none" class="ml-5"
-                                    onClick="change_password('修改密码','change-password.html','10001','600','270')"
-                                    href="javascript:;" title="修改密码"><i class="Hui-iconfont">&#xe63f;</i></a> <a title="删除"
-                                    href="javascript:;" onclick="member_del(this,'1')" class="ml-5"
-                                    style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+                            <td class="td-status">
+                                {if condition="$vo.status == 1"}
+                                    <span class="label label-success radius">已启用</span>
+                                {else/}
+                                    <span class="label label-defaunt radius">已停用</span>
+                                {/if}
+                            </td>
+                            <td class="td-manage">
+                                {if condition="$vo.status == 1"}
+                                    <a style="text-decoration:none" onClick="member_stop(this,'10001','{$vo.id}')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe6e1;</i></a>
+                                {else/}
+                                    <a style="text-decoration:none" onClick="member_start(this,id,'{$vo.id}')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe631;</i></a>
+                                {/if}
+                                 <a title="编辑"
+                                    href="javascript:;" onclick="member_edit('编辑','eidt.html','4','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
+                                <a style="text-decoration:none" class="ml-5"onClick="change_password('修改密码','change-password.html','10001','600','270')" href="javascript:;" title="修改密码"><i class="Hui-iconfont">&#xe63f;</i></a>
+                                <a title="删除" href="javascript:;" onclick="member_del(this,'{$vo.id}')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a>
+                            </td>
                         </tr>
                     {/foreach}
                 </tbody>
@@ -66,20 +84,20 @@
 
     <!--请在下方写此页面业务相关的脚本-->
     <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-    <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
+    <!-- <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script> -->
     <script type="text/javascript" src="/__STATIC__/lib/laypage/1.2/laypage.js"></script>
     <script type="text/javascript">
-        $(function () {
-            $('.table-sort').dataTable({
-                "aaSorting": [[1, "desc"]],//默认第几个排序
-                "bStateSave": true,//状态保存
-                "aoColumnDefs": [
-                    //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-                    { "orderable": false, "aTargets": [0, 8, 9] }// 制定列不参与排序
-                ]
-            });
+        // $(function () {
+        //     $('.table-sort').dataTable({
+        //         "aaSorting": [[1, "desc"]],//默认第几个排序
+        //         "bStateSave": true,//状态保存
+        //         "aoColumnDefs": [
+        //             //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+        //             { "orderable": false, "aTargets": [0, 8, 9] }// 制定列不参与排序
+        //         ]
+        //     });
 
-        });
+        // });
         /*用户-添加*/
         function member_add(title, url, w, h) {
             layer_show(title, url, w, h);
@@ -89,40 +107,58 @@
             layer_show(title, url, w, h);
         }
         /*用户-停用*/
-        function member_stop(obj, id) {
+        function member_stop(obj, id, user_id) {
             layer.confirm('确认要停用吗？', function (index) {
                 $.ajax({
                     type: 'POST',
-                    url: '',
+                    url: '{:url("admin/member/handle")}',
                     dataType: 'json',
+                    data: {'id':user_id,'act':"status",'status':0},
                     success: function (data) {
-                        $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_start(this,id)" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>');
-                        $(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已停用</span>');
-                        $(obj).remove();
-                        layer.msg('已停用!', { icon: 5, time: 1000 });
+                        if (data.code == 1) {
+                            $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_start(this,id,{$vo.id})" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>');
+                            $(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已停用</span>');
+                            $(obj).remove();
+                            layer.msg('已停用!', { icon: 5, time: 1000 },function(){
+                                window.location.reload();
+                            });
+                        } else {
+                            layer.msg('停用失败!', {icon: 2, time: 1000 });
+                        }
                     },
                     error: function (data) {
-                        console.log(data.msg);
+                        layer.alert("服务器繁忙, 请联系管理员!");
+                        // console.log(data.msg);
                     },
                 });
             });
         }
 
         /*用户-启用*/
-        function member_start(obj, id) {
+        function member_start(obj, id, user_id) {
             layer.confirm('确认要启用吗？', function (index) {
                 $.ajax({
                     type: 'POST',
-                    url: '',
+                    url: '{:url("admin/member/handle")}',
                     dataType: 'json',
+                    data: {'id':user_id,'act':"status",'status':1},
                     success: function (data) {
-                        $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_stop(this,id)" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>');
-                        $(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
-                        $(obj).remove();
-                        layer.msg('已启用!', { icon: 6, time: 1000 });
+                        if (data.code == 1) {
+                            $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_stop(this,id,{$vo.id})" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>');
+                            $(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
+                            $(obj).remove();
+                            layer.msg('已启用!', { icon: 6, time: 1000 },function(){
+                                window.location.reload();
+                            });
+                        } else {
+                            layer.msg('启用失败!',{ icon: 2, time: 1000 })
+                        }
+                        
                     },
                     error: function (data) {
-                        console.log(data.msg);
+                        console.log(data);
+                        layer.alert("服务器繁忙, 请联系管理员!");
+                        // console.log(data.msg);
                     },
                 });
             });
@@ -140,17 +176,60 @@
             layer.confirm('确认要删除吗？', function (index) {
                 $.ajax({
                     type: 'POST',
-                    url: '',
+                    url: '{:url("admin/member/handle")}',
+                    data: {'id':id,'act':"del"},
                     dataType: 'json',
                     success: function (data) {
-                        $(obj).parents("tr").remove();
-                        layer.msg('已删除!', { icon: 1, time: 1000 });
+                        if (data.code == 1) {
+                            $(obj).parents("tr").remove();
+                            layer.msg(data.msg, { icon: 1, time: 1000 });
+                        } else {
+                            layer.msg(data.msg, { icon: 2, time: 1000 });
+                        }
                     },
                     error: function (data) {
-                        console.log(data.msg);
+                        layer.alert("服务器繁忙, 请联系管理员!");
                     },
                 });
             });
+        }
+        /* 多用户删除 */
+        function datadel(){
+            id = document.getElementsByName("user_id");
+            check_val = [];
+            for(k in id){
+                if(id[k].checked){
+                    check_val.push(id[k].value);
+                }
+            }
+            console.log(check_val);
+            if (check_val.length == 0) {
+                layer.alert("你还没有选择!");
+            } else {
+                check_val = JSON.stringify(check_val);
+                layer.confirm('确认要删除吗？', function (index) {
+                    $.ajax({
+                        type: 'POST',
+                        url: '{:url("admin/member/handle")}',
+                        data: {'id':check_val,'act':"del"},
+                        dataType: 'json',
+                        success: function (data) {
+                            if (data.code == 1) {
+                                // $(obj).parents("tr").remove();
+                                layer.msg(data.msg, { icon: 1, time: 1000 },function(){
+                                    parent.location.reload();
+                                });
+                            } else {
+                                layer.msg(data.msg, { icon: 2, time: 1000 });
+                            }
+                        },
+                        error: function (data) {
+                            layer.alert("服务器繁忙, 请联系管理员!");
+                        },
+                    });
+                });
+            }
+            
         }
     </script>
 </body>
