--- a/application/admin/view/system/menu.html
+++ b/application/admin/view/system/menu.html
@@ -4,7 +4,7 @@
 
 <body>
 	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统设置 <span
-			class="c-gray en">&gt;</span> 菜单列表 <a class="btn btn-success radius r"
+			class="c-gray en">&gt;</span> 菜单列表 <a class="btn btn-success radius r replace"
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
@@ -12,14 +12,14 @@
 			<input type="text" onfocus="WdatePicker()" id="datemin" class="input-text Wdate" style="width:120px;">
 			-
 			<input type="text" onfocus="WdatePicker()" id="datemax" class="input-text Wdate" style="width:120px;">
-			<input type="text" class="input-text" style="width:250px" placeholder="输入管理员名称" id="" name="keywords">
+			<input type="text" class="input-text" style="width:250px" placeholder="输入菜单名称" id="" name="keywords">
 			<button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i>
 				搜用户</button>
 		</div>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
 			<span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i
 						class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;"
-					onclick="admin_add('添加菜单','{:url('admin/system/add_menu')}','800','500')"
+					onclick="menu_add('添加菜单','{:url('admin/system/add_menu')}','800','500')"
 					class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加菜单</a></span> <span
 				class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
@@ -34,38 +34,57 @@
 					<th width="90">层级</th>
 					<th width="150">上级菜单</th>
 					<th width="130">加入时间</th>
-					<th width="100">是否已启用</th>
+					<th width="100">状态</th>
 					<th width="100">操作</th>
                 </tr>
 			</thead>
 			<tbody>
+				{if condition="isset($list) && $list"}
                 {volist name="list" id="vo"}
                 <tr class="text-c">
                     <td><input type="checkbox" value="1" name=""></td>
-                    <td>1</td>
-                    <td>admin</td>
-                    <td>13000000000</td>
-                    <td>admin@mail.com</td>
-                    <td>2014-6-11 11:11:42</td>
-                    <td class="td-status"><span class="label label-success radius">已启用</span></td>
-                    <td class="td-manage">
-                        <a style="text-decoration:none" onClick="admin_stop(this,'10001')" href="javascript:;"
-                            title="停用">
+                    <td>{$vo.id}</td>
+                    <td>{$vo.name}</td>
+                    <td>{$vo.level}</td>
+                    <td>{$pname[$vo.parent_id]}</td>
+                    <td>{$vo.addtime|date="Y-m-d H:i:s",###}</td>
+                    <td class="td-status">
+						{if condition="$vo.is_lock eq 0"}
+						<span class="label label-success radius">正常</span>
+						{else /}
+						<span class="label label-default radius">隐藏</span>
+						{/if}
+					</td>
+                    <td class="td-manage" data-id="{$vo.id}">
+						{if condition="$vo.is_lock eq 0"}
+                        <a style="text-decoration:none" onClick="menu_stop(this)" href="javascript:;"
+                            title="隐藏">
                             <i class="Hui-iconfont">&#xe631;</i>
-                        </a>
-                        <a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','admin-add.html','1','800','500')"
+						</a>
+						{else /}
+						<a style="text-decoration:none" onClick="menu_start(this)" href="javascript:;"
+                            title="显示">
+                            <i class="Hui-iconfont">&#xe615;</i>
+						</a>
+						{/if}
+                        <a title="编辑" href="javascript:;" onclick="menu_edit('菜单编辑','/admin/system/add_menu?menu_id={$vo.id}','','800','500')"
                             class="ml-5" style="text-decoration:none">
-                        </a><i class="Hui-iconfont">&#xe6df;</i>
+                        	<i class="Hui-iconfont">&#xe6df;</i>
                         </a>
-                        <a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5"
+                        <a title="删除" href="javascript:;" onclick="menu_del(this,'{$vo.id}')" class="ml-5"
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe6e2;</i>
                         </a>
                     </td>
                 </tr>
-                {/volist}
+				{/volist}
+				{/if}
 			</tbody>
 		</table>
+		<div class="pages">{$list->render()}</div>
+		{if condition="!isset($list) or !$list"}
+		<p class="no-data">暂无数据</p>
+		{/if}
 	</div>
 	<!--_footer 作为公共模版分离出去-->
 	{include file='layout/footer' /}
@@ -83,54 +102,65 @@
 			w		弹出层宽度（缺省调默认值）
 			h		弹出层高度（缺省调默认值）
 		*/
-		/*管理员-增加*/
-		function admin_add(title, url, w, h) {
+		/*菜单-增加*/
+		function menu_add(title, url, w, h) {
 			layer_show(title, url, w, h);
 		}
-		/*管理员-删除*/
-		function admin_del(obj, id) {
-			layer.confirm('确认要删除吗？', function (index) {
-				$.ajax({
-					type: 'POST',
-					url: '',
-					dataType: 'json',
-					success: function (data) {
-						$(obj).parents("tr").remove();
-						layer.msg('已删除!', { icon: 1, time: 1000 });
-					},
-					error: function (data) {
-						console.log(data.msg);
-					},
+		/*菜单-删除*/
+		function menu_del(obj, id) {
+			layer.confirm('确认要删除吗？<p style="color:red;">注意： 菜单删除后，子菜单也会被删除</p>', function (index) {
+				$.post('/admin/system/del_menu',{menu_id:id},function(res){
+					var res = JSON.parse(res);
+					if(res.status == 1){
+						layer.msg('操作成功', { icon: 6, time: 1000 });
+						window.location.replace(location.href);
+					}else{
+						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+					}
 				});
 			});
 		}
 
-		/*管理员-编辑*/
-		function admin_edit(title, url, id, w, h) {
+		/*菜单-编辑*/
+		function menu_edit(title, url, id, w, h) {
 			layer_show(title, url, w, h);
 		}
-		/*管理员-停用*/
-		function admin_stop(obj, id) {
-			layer.confirm('确认要停用吗？', function (index) {
+		/*菜单-停用*/
+		function menu_stop(obj) {
+			var id = $(obj).parents('.td-manage').data('id');
+			layer.confirm('确认要隐藏菜单吗？', function (index) {
 				//此处请求后台程序，下方是成功后的前台处理……
-
-				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-				$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-				$(obj).remove();
-				layer.msg('已停用!', { icon: 5, time: 1000 });
+				$.post('/admin/system/menu_islock',{is_lock:1,menu_id:id},function(res){
+					var res = JSON.parse(res);
+					if(res.status == 1){
+						$(obj).parents("tr").find(".td-manage").prepend('<a onClick="menu_start(this)" href="javascript:;" title="隐藏" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
+						$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">隐藏</span>');
+						$(obj).remove();
+						layer.msg('已隐藏菜单!', { icon: 6, time: 1000 });
+					}else{
+						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+					}
+				});
+				
 			});
 		}
 
-		/*管理员-启用*/
-		function admin_start(obj, id) {
-			layer.confirm('确认要启用吗？', function (index) {
+		/*菜单-启用*/
+		function menu_start(obj) {
+			var id = $(obj).parents('.td-manage').data('id');
+			layer.confirm('确认要启用菜单吗？', function (index) {
 				//此处请求后台程序，下方是成功后的前台处理……
-
-
-				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_stop(this,id)" href="javascript:;" title="停用" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
-				$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
-				$(obj).remove();
-				layer.msg('已启用!', { icon: 6, time: 1000 });
+				$.post('/admin/system/menu_islock',{is_lock:0,menu_id:id},function(res){
+					var res = JSON.parse(res);
+					if(res.status == 1){
+						$(obj).parents("tr").find(".td-manage").prepend('<a onClick="menu_stop(this)" href="javascript:;" title="显示" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
+						$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">正常</span>');
+						$(obj).remove();
+						layer.msg('已启用!', { icon: 6, time: 1000 });
+					}else{
+						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+					}
+				});
 			});
 		}
 	</script>
