--- a/application/admin/view/layout/head.html
+++ b/application/admin/view/layout/head.html
@@ -23,3 +23,52 @@
     <meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
     <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
+<style>
+    .no-data{
+        color: coral;
+        display: block;
+        height: 75px; 
+        line-height: 75px;
+        font-size:24px;
+        text-align: center;
+    }
+    .pages{
+        display:block;
+        padding-top: 25px; 
+        width: 100%;
+        height: 75px;
+        text-align: center;
+    }
+    .pagination{
+        display:block;
+        margin: 0 ;
+    }
+    .pagination li a{
+        display: block;
+        width:30px;
+        height: 25px;
+        line-height: 25px;
+        border:1px solid rgb(171, 171, 171);
+        text-align: center;
+        float: left;
+        margin-left:2px; 
+    }
+    .pagination li span{
+        display: block;
+        width:30px;
+        height: 25px;
+        line-height: 25px;
+        border:1px solid rgb(171, 171, 171);
+        text-align: center;
+        float: left;
+        margin-left:2px; 
+    }
+    .pagination li:hover{
+        cursor:pointer;
+    }
+
+    .active span{
+        background: blue;
+        color: #fff;
+    }
+</style>
