--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -17,11 +17,21 @@
 				搜用户</button>
 		</div>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
-			<span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i
-						class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;"
-					onclick="admin_add('添加管理员','{:url('admin/admin/add')}','800','500')"
-					class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加管理员</a></span> <span
-				class="r">共有数据：<strong>54</strong> 条</span> </div>
+			<span class="l">
+				<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius">
+					<i class="Hui-iconfont">&#xe6e2;</i> 
+					批量删除
+				</a> 
+				<a href="javascript:;" onclick="admin_add('添加管理员','{:url('admin/admin/add')}','800','500')" class="btn btn-primary radius">
+					<i class="Hui-iconfont">&#xe600;</i> 
+					添加管理员
+				</a>
+				<a href="{:url('admin/admin/role')}" class="btn btn-default ">
+					<i class="Hui-iconfont">&#xe62c;</i> 
+					角色管理
+				</a>
+			</span> 
+			<span class="r">共有数据：<strong>54</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
