--- a/application/admin/view/system/menu.html
+++ b/application/admin/view/system/menu.html
@@ -8,14 +8,14 @@
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
-		<div class="text-c"> 日期范围：
-			<input type="text" onfocus="WdatePicker()" id="datemin" class="input-text Wdate" style="width:120px;">
-			-
-			<input type="text" onfocus="WdatePicker()" id="datemax" class="input-text Wdate" style="width:120px;">
-			<input type="text" class="input-text" style="width:250px" placeholder="输入菜单名称" id="" name="keywords">
-			<button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i>
-				搜用户</button>
+		<form method="GET" action="">
+		<div class="text-c"> 菜单名称：
+			<input type="text" class="input-text" style="width:250px" placeholder="输入菜单名称" value="{$keywords}" name="keywords">
+			<button type="submit" class="btn btn-success" id="" name="">
+				<i class="Hui-iconfont">&#xe665;</i>
+				搜索</button>
 		</div>
+		</form>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
 			<span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i
 						class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;"
