修改密码逻辑代码

--- a/application/admin/view/member/change_password.html
+++ b/application/admin/view/member/change_password.html
@@ -57,10 +57,28 @@ $(function(){
 		focusCleanup:true,
 		success:"valid",
 		submitHandler:function(form){
-			$(form).ajaxSubmit();
-			var index = parent.layer.getFrameIndex(window.name);
-			parent.$('.btn-refresh').click();
-			parent.layer.close(index);
+			$.ajax({
+				type: "post",
+				url: "{:url('admin/member/handle')}",
+				data: $(form).serialize(),
+				success: function(data){
+					if (data.code == 1) {
+						layer.msg(data.msg, {icon: 1, time: 1000},function(){
+							parent.location.reload();
+						});
+					} else {
+						layer.msg(data.msg, {icon: 2, time: 1000});
+					}
+				},
+				error: function(){
+					layer.alert("服务器繁忙, 请联系管理员!");
+				}
+			});
+
+			// $(form).ajaxSubmit();
+			// var index = parent.layer.getFrameIndex(window.name);
+			// parent.$('.btn-refresh').click();
+			// parent.layer.close(index);
 		}
 	});
 });
